# IlonasRiddle

./: .gitignore  CMakeLists.txt  README.md  solutions.txt
apps/: riddlesolver.cpp
lib/: helpers.cpp  helpers.hpp
tests/: evaluate_term.cpp
